--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Vite + React</title>
     <link href="https://use.typekit.net/rnn3pdy.css" rel="stylesheet">
   </head>
-  <body>
+  <body class="bg-white text-black dark:bg-black dark:text-gray-100 transition-colors">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
