--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
-    <link href="https://use.typekit.net/rnn3pdy.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,100..900;1,100..900&display=block" rel="stylesheet">
   </head>
   <body class="bg-white text-black dark:bg-black dark:text-gray-100 transition-colors">
     <div id="root"></div>
