--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
     <title>Vite + React</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,100..900;1,100..900&display=block" rel="stylesheet">
   </head>
-  <body class="bg-white text-black dark:bg-black dark:text-gray-100 transition-colors">
-    <div id="root"></div>
+  <body class="overflow-hidden bg-white text-black dark:bg-black dark:text-gray-100 transition-colors ios-container">
+    <div class="overflow-hidden" id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
