--- a/index.html
+++ b/index.html
@@ -11,10 +11,8 @@
   </head>
   <body class="h-screen w-screen relative overflow-hidden overscroll-none touch-none">
     <div class="app-canvas overflow-hidden touch-auto" id="root"></div>
+    <script>
+      window.alert("Hello");
+    </script>
   </body>
-  <script>
-    document.body.addEventListener('touchmove', function(e) {
-      e.preventDefault();
-    }, false);
-  </script>
 </html>
