--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html class="h-screen w-screen relative overflow-hidden overscroll-none" lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
@@ -7,8 +7,8 @@
     <title>Vite + React</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,100..900;1,100..900&display=block" rel="stylesheet">
   </head>
-  <body class="overflow-hidden bg-white text-black dark:bg-black dark:text-gray-100 transition-colors ios-container">
-    <div class="overflow-hidden" id="root"></div>
+  <body class="app-body h-screen w-screen relative overflow-hidden overscroll-none touch-none">
+    <div class="app-canvas overflow-hidden touch-none" id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
