Mobile styling, navigation

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Vite + React</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,100..900;1,100..900&display=block" rel="stylesheet">
   </head>
-  <body class="body-padding">
+  <body class="body-padding bg-dark-bg text-dark-text/80">
     <div class="" id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
